<resources>
    <string name="app_name">Midterm</string>
    <string name="black_turtleneck_top">Black turtleneck top</string>
    <string name="striked_price"><strike>$64</strike></string>
    <string name="description">Description</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer
        took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
        but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
        with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
        software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="buy_now">Buy now</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="balance">Balance</string>
    <string name="add_balance">Add balance</string>
    <string name="example_john_jason_doe">Example: John Jason Doe</string>
    <string name="amount">Amount</string>
    <string name="full_name_on_card">Full name on card</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="credit_card_example">Ex: 0000 0000 0000 0000</string>
    <string name="expiration_date">Expiration date</string>
    <string name="expiration_month">MM</string>
    <string name="expiration_year">YY</string>
    <string name="cvv_code">CVV Code</string>
    <string name="cvv_example">Ex: 000</string>
    <string name="fullname_is_empty">სახელი/გვარი ცარიელია</string>
    <string name="card_is_expired">ბარათი ვადაგასულია</string>
    <string name="invalid_month">არასწორი თვე</string>
    <string name="cvv_must_be_3_digit">CVV უნდა იყოს 3 ციფრიანი</string>
    <string name="fill_all_fields">შეავსე ყველა ველი</string>
    <string name="submit">Submit</string>
    <string name="full_name">Full name</string>
    <string name="card_expiry">Card expiry</string>
    <string name="card_cvv">Card CVV</string>

</resources>